# diff.hs

./: Diff.hs  diff.cabal  stack.yaml
test/: Main.hs
